name:                problem-counter
version:             0.1.0.0
synopsis:            Math homework problem counter
homepage:            https://github.com/evanrelf/problem-counter
author:              Evan Relf
maintainer:          evan@evanrelf.com
license:             MIT
license-file:        LICENSE
category:            Math
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
  README.md
  LICENSE

source-repository head
  type:              git
  location:          https://github.com/evanrelf/problem-counter.git

executable problem-counter
  default-language:  Haskell2010
  ghc-options:       -Wall
  main-is:           ProblemCounter.hs
  build-depends:
      base ==4.8.*
    , split ==0.2.*
