name:                problem-counter
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/evanrelf/problem-counter
license:             LGPLv3
license-file:        LICENSE
author:              Evan Relf <evan@evanrelf.com>
maintainer:          Evan Relf <evan@evanrelf.com>
copyright:           2018 Evan Relf
category:            Math
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable problem-counter
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , regex-compat
