cabal-version: 2.2

name:       problem-counter
version:    0.2.0.0
category:   Math
homepage:   https://github.com/evanrelf/problem-counter
author:     Evan Relf <evan@evanrelf.com>
maintainer: Evan Relf <evan@evanrelf.com>
copyright:  2021 Evan Relf
license:    ISC

executable problem-counter
  main-is: Main.hs
  hs-source-dirs: src
  build-depends:
    , base       >=4.7 && <5
    , megaparsec ^>= 9.0.1
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Werror=incomplete-record-updates
    -Werror=incomplete-uni-patterns
    -Werror=missing-fields
    -Werror=partial-fields
    -Widentities
    -Wmissing-home-modules
    -Wredundant-constraints
    -fshow-warning-groups
    -threaded
    -rtsopts
    -with-rtsopts=-N
